--- a/lib/l10n/intl_sk.arb
+++ b/lib/l10n/intl_sk.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "sk",
-  "@@last_modified": "2025-12-15 14:43:00.627770",
+  "@@last_modified": "2025-12-29 16:02:47.860221",
   "about": "O aplikácii",
   "@about": {
     "type": "String",
@@ -11787,6 +11787,16 @@
     "placeholders": {}
   },
   "@ssoDialogHelpText": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "disableLanguageToolsTitle": "Deaktivovať jazykové nástroje",
+  "disableLanguageToolsDesc": "Chceli by ste deaktivovať automatickú jazykovú pomoc?",
+  "@disableLanguageToolsTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@disableLanguageToolsDesc": {
     "type": "String",
     "placeholders": {}
   }
