--- a/lib/l10n/intl_te.arb
+++ b/lib/l10n/intl_te.arb
@@ -1920,7 +1920,7 @@
   "playWithAI": "ఇప్పుడే AI తో ఆడండి",
   "courseStartDesc": "పాంజియా బాట్ ఎప్పుడైనా సిద్ధంగా ఉంటుంది!\n\n...కానీ స్నేహితులతో నేర్చుకోవడం మెరుగైనది!",
   "@@locale": "te",
-  "@@last_modified": "2025-12-15 14:43:41.716893",
+  "@@last_modified": "2025-12-29 16:03:22.199306",
   "@setCustomPermissionLevel": {
     "type": "String",
     "placeholders": {}
@@ -11792,6 +11792,16 @@
     "placeholders": {}
   },
   "@ssoDialogHelpText": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "disableLanguageToolsTitle": "భాషా సాధనాలను నిలిపివేయండి",
+  "disableLanguageToolsDesc": "మీరు ఆటోమేటిక్ భాషా సహాయాన్ని నిలిపివేయాలనుకుంటున్నారా?",
+  "@disableLanguageToolsTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@disableLanguageToolsDesc": {
     "type": "String",
     "placeholders": {}
   }
