--- a/lib/l10n/intl_th.arb
+++ b/lib/l10n/intl_th.arb
@@ -4456,7 +4456,7 @@
   "playWithAI": "เล่นกับ AI ชั่วคราว",
   "courseStartDesc": "Pangea Bot พร้อมที่จะเริ่มต้นได้ทุกเมื่อ!\n\n...แต่การเรียนรู้ดีกว่ากับเพื่อน!",
   "@@locale": "th",
-  "@@last_modified": "2025-12-15 14:43:32.503180",
+  "@@last_modified": "2025-12-29 16:03:13.573254",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -11761,6 +11761,16 @@
     "placeholders": {}
   },
   "@ssoDialogHelpText": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "disableLanguageToolsTitle": "ปิดเครื่องมือภาษา",
+  "disableLanguageToolsDesc": "คุณต้องการปิดการช่วยเหลือภาษาอัตโนมัติหรือไม่?",
+  "@disableLanguageToolsTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@disableLanguageToolsDesc": {
     "type": "String",
     "placeholders": {}
   }
