--- a/lib/l10n/intl_bo.arb
+++ b/lib/l10n/intl_bo.arb
@@ -4279,7 +4279,7 @@
   "joinPublicTrip": "མི་ཚེས་ལ་ལོག་འབད།",
   "startOwnTrip": "ངེད་རང་གི་ལོག་ལ་སྦྱོར་བཅོས།",
   "@@locale": "bo",
-  "@@last_modified": "2025-12-15 14:43:49.837126",
+  "@@last_modified": "2025-12-29 16:03:29.478557",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -10457,6 +10457,16 @@
     "placeholders": {}
   },
   "@ssoDialogHelpText": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "disableLanguageToolsTitle": "Disaɓa ɓe laawol ɗe",
+  "disableLanguageToolsDesc": "Aɗa yiɗi ɗaɓɓita caɗeele laawol ɓe naatnude?",
+  "@disableLanguageToolsTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@disableLanguageToolsDesc": {
     "type": "String",
     "placeholders": {}
   }
