--- a/lib/l10n/intl_ca.arb
+++ b/lib/l10n/intl_ca.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-12-15 14:43:31.134664",
+  "@@last_modified": "2025-12-29 16:03:11.864159",
   "about": "Quant a",
   "@about": {
     "type": "String",
@@ -10727,6 +10727,16 @@
     "placeholders": {}
   },
   "@ssoDialogHelpText": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "disableLanguageToolsTitle": "Desactivar eines d'idioma",
+  "disableLanguageToolsDesc": "Voleu desactivar l'assistència automàtica d'idioma?",
+  "@disableLanguageToolsTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@disableLanguageToolsDesc": {
     "type": "String",
     "placeholders": {}
   }
