--- a/lib/l10n/intl_el.arb
+++ b/lib/l10n/intl_el.arb
@@ -4456,7 +4456,7 @@
   "playWithAI": "Παίξτε με την Τεχνητή Νοημοσύνη προς το παρόν",
   "courseStartDesc": "Ο Pangea Bot είναι έτοιμος να ξεκινήσει οποιαδήποτε στιγμή!\n\n...αλλά η μάθηση είναι καλύτερη με φίλους!",
   "@@locale": "el",
-  "@@last_modified": "2025-12-15 14:43:58.410031",
+  "@@last_modified": "2025-12-29 16:03:38.899795",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -11761,6 +11761,16 @@
     "placeholders": {}
   },
   "@ssoDialogHelpText": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "disableLanguageToolsTitle": "Απενεργοποίηση εργαλείων γλώσσας",
+  "disableLanguageToolsDesc": "Θα θέλατε να απενεργοποιήσετε την αυτόματη βοήθεια γλώσσας;",
+  "@disableLanguageToolsTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@disableLanguageToolsDesc": {
     "type": "String",
     "placeholders": {}
   }
