--- a/lib/l10n/intl_eu.arb
+++ b/lib/l10n/intl_eu.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "eu",
-  "@@last_modified": "2025-12-15 14:43:14.531001",
+  "@@last_modified": "2025-12-29 16:02:58.251989",
   "about": "Honi buruz",
   "@about": {
     "type": "String",
@@ -10703,6 +10703,16 @@
     "placeholders": {}
   },
   "@ssoDialogHelpText": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "disableLanguageToolsTitle": "Desaktibatu hizkuntza tresnak",
+  "disableLanguageToolsDesc": "Desaktibatu nahi al duzu hizkuntza laguntza automatikoa?",
+  "@disableLanguageToolsTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@disableLanguageToolsDesc": {
     "type": "String",
     "placeholders": {}
   }
