--- a/lib/l10n/intl_ga.arb
+++ b/lib/l10n/intl_ga.arb
@@ -4517,7 +4517,7 @@
   "playWithAI": "Imir le AI faoi láthair",
   "courseStartDesc": "Tá Bot Pangea réidh chun dul am ar bith!\n\n...ach is fearr foghlaim le cairde!",
   "@@locale": "ga",
-  "@@last_modified": "2025-12-15 14:44:07.686971",
+  "@@last_modified": "2025-12-29 16:03:49.650305",
   "@customReaction": {
     "type": "String",
     "placeholders": {}
@@ -10701,6 +10701,16 @@
     "placeholders": {}
   },
   "@ssoDialogHelpText": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "disableLanguageToolsTitle": "Díchur uirlisí teanga",
+  "disableLanguageToolsDesc": "Ar mhaith leat uirlisí cabhrach teanga uathoibríoch a díchur?",
+  "@disableLanguageToolsTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@disableLanguageToolsDesc": {
     "type": "String",
     "placeholders": {}
   }
