--- a/lib/l10n/intl_gl.arb
+++ b/lib/l10n/intl_gl.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "gl",
-  "@@last_modified": "2025-12-15 14:42:50.213816",
+  "@@last_modified": "2025-12-29 16:02:37.559201",
   "about": "Acerca de",
   "@about": {
     "type": "String",
@@ -10700,6 +10700,16 @@
     "placeholders": {}
   },
   "@ssoDialogHelpText": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "disableLanguageToolsTitle": "Desactivar ferramentas de idioma",
+  "disableLanguageToolsDesc": "Gustaríache desactivar a asistencia automática de idioma?",
+  "@disableLanguageToolsTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@disableLanguageToolsDesc": {
     "type": "String",
     "placeholders": {}
   }
