--- a/lib/l10n/intl_he.arb
+++ b/lib/l10n/intl_he.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-12-15 14:43:10.892818",
+  "@@last_modified": "2025-12-29 16:02:53.990837",
   "about": "אודות",
   "@about": {
     "type": "String",
@@ -11752,6 +11752,16 @@
     "placeholders": {}
   },
   "@ssoDialogHelpText": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "disableLanguageToolsTitle": "כבה כלים לשפה",
+  "disableLanguageToolsDesc": "האם תרצה לכבות את העזרה האוטומטית בשפה?",
+  "@disableLanguageToolsTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@disableLanguageToolsDesc": {
     "type": "String",
     "placeholders": {}
   }
