--- a/lib/l10n/intl_hi.arb
+++ b/lib/l10n/intl_hi.arb
@@ -4483,7 +4483,7 @@
   "playWithAI": "अभी के लिए एआई के साथ खेलें",
   "courseStartDesc": "पैंजिया बॉट कभी भी जाने के लिए तैयार है!\n\n...लेकिन दोस्तों के साथ सीखना बेहतर है!",
   "@@locale": "hi",
-  "@@last_modified": "2025-12-15 14:44:00.905904",
+  "@@last_modified": "2025-12-29 16:03:42.358809",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -11788,6 +11788,16 @@
     "placeholders": {}
   },
   "@ssoDialogHelpText": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "disableLanguageToolsTitle": "भाषा उपकरणों को निष्क्रिय करें",
+  "disableLanguageToolsDesc": "क्या आप स्वचालित भाषा सहायता को निष्क्रिय करना चाहेंगे?",
+  "@disableLanguageToolsTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@disableLanguageToolsDesc": {
     "type": "String",
     "placeholders": {}
   }
