--- a/lib/l10n/intl_id.arb
+++ b/lib/l10n/intl_id.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-12-15 14:42:56.674775",
+  "@@last_modified": "2025-12-29 16:02:44.967200",
   "setAsCanonicalAlias": "Atur sebagai alias utama",
   "@setAsCanonicalAlias": {
     "type": "String",
@@ -10694,6 +10694,16 @@
     "placeholders": {}
   },
   "@ssoDialogHelpText": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "disableLanguageToolsTitle": "Nonaktifkan alat bahasa",
+  "disableLanguageToolsDesc": "Apakah Anda ingin menonaktifkan bantuan bahasa otomatis?",
+  "@disableLanguageToolsTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@disableLanguageToolsDesc": {
     "type": "String",
     "placeholders": {}
   }
