--- a/lib/l10n/intl_it.arb
+++ b/lib/l10n/intl_it.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-12-15 14:43:23.466924",
+  "@@last_modified": "2025-12-29 16:03:05.491594",
   "about": "Informazioni",
   "@about": {
     "type": "String",
@@ -10706,6 +10706,16 @@
     "placeholders": {}
   },
   "@ssoDialogHelpText": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "disableLanguageToolsTitle": "Disabilita gli strumenti linguistici",
+  "disableLanguageToolsDesc": "Vuoi disabilitare l'assistenza linguistica automatica?",
+  "@disableLanguageToolsTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@disableLanguageToolsDesc": {
     "type": "String",
     "placeholders": {}
   }
