--- a/lib/l10n/intl_nb.arb
+++ b/lib/l10n/intl_nb.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-12-15 14:43:27.926249",
+  "@@last_modified": "2025-12-29 16:03:09.114788",
   "about": "Om",
   "@about": {
     "type": "String",
@@ -11796,6 +11796,16 @@
     "placeholders": {}
   },
   "@ssoDialogHelpText": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "disableLanguageToolsTitle": "Deaktiver språkværktøy",
+  "disableLanguageToolsDesc": "Ønsker du å deaktivere automatisk språkassistanse?",
+  "@disableLanguageToolsTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@disableLanguageToolsDesc": {
     "type": "String",
     "placeholders": {}
   }
