--- a/lib/l10n/intl_pl.arb
+++ b/lib/l10n/intl_pl.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "pl",
-  "@@last_modified": "2025-12-15 14:43:55.454694",
+  "@@last_modified": "2025-12-29 16:03:35.212238",
   "about": "O aplikacji",
   "@about": {
     "type": "String",
@@ -10701,6 +10701,16 @@
     "placeholders": {}
   },
   "@ssoDialogHelpText": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "disableLanguageToolsTitle": "Wyłącz narzędzia językowe",
+  "disableLanguageToolsDesc": "Czy chcesz wyłączyć automatyczną pomoc językową?",
+  "@disableLanguageToolsTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@disableLanguageToolsDesc": {
     "type": "String",
     "placeholders": {}
   }
