--- a/lib/l10n/intl_sv.arb
+++ b/lib/l10n/intl_sv.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-12-15 14:43:56.890657",
+  "@@last_modified": "2025-12-29 16:03:36.702673",
   "about": "Om",
   "@about": {
     "type": "String",
@@ -11181,6 +11181,16 @@
     "placeholders": {}
   },
   "@ssoDialogHelpText": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "disableLanguageToolsTitle": "Inaktivera språkinstrument",
+  "disableLanguageToolsDesc": "Vill du inaktivera automatisk språkhjälp?",
+  "@disableLanguageToolsTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@disableLanguageToolsDesc": {
     "type": "String",
     "placeholders": {}
   }
